a72q: Increase cutout size
*This will stop the light sensor from interfering with the panel backlight in dark areas

Change-Id: Iecaf11b073c1262b817f28caea06f592e54081f2

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -39,7 +39,7 @@
 
          @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0,0 M 0,12.08888888888889 a 9.244444444444444,9.244444444444444 0 1,0 0,18.48888888888889 a 9.244444444444444,9.244444444444444 0 1,0 0,-18.48888888888889 Z @dp</string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0 0 M 0 25 a 9.2444 9.2444 0 1 0 0 70 a 9.2444 9.2444 0 1 0 0 -70 Z</string>
 
     <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
     <integer-array name="config_udfps_sensor_props">
